<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_24dp"
                android:layout_marginEnd="@dimen/size_24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.tunc.wallpaperandroid.customviews.ClassicTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="40sp" />



                <com.tunc.wallpaperandroid.customviews.ClassicEditText
                    android:id="@+id/emailEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:hint="@string/email" />

                <com.tunc.wallpaperandroid.customviews.ClassicEditText
                    android:id="@+id/passwordEd"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:hint="@string/password" />

                <com.tunc.wallpaperandroid.customviews.ClassicButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginButton"
                    android:layout_marginTop="@dimen/size_24dp"
                    android:text="@string/button_login" />

                <com.tunc.wallpaperandroid.customviews.ClassicTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:visibility="gone"
                    android:alpha="0.8"
                    android:text="@string/forgot_password" />

                <com.tunc.wallpaperandroid.customviews.ClassicTextView
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/size_24dp"
                    android:text="@string/register"
                    android:textSize="@dimen/text_size_17sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>